jgps: start of location app to manage locations/media

--- a/app/jgps/trunk/server/webapp/locmenu.html
+++ b/app/jgps/trunk/server/webapp/locmenu.html
@@ -1,9 +1,8 @@
 <div id="mainmenu" class="mn-container">
 	<ul class="mn-content">
-		<li><a href="#">Mode</a>
+		<li><a href="#">Sessie</a>
 			<ul>
-				<li><a href="#" fn="GTAPP.mLive">live</a></li>
-				<li><a href="#" fn="GTAPP.mArchive">archief</a></li>
+				<li><a href="#" fn="LOCAPP.startSession">start sessie</a></li>
 			</ul>
 		</li>
 		<li><a href="#">Routes</a>
