New REST requests, DIWIQueryHandler + test page

--- a/app/diwi/trunk/client/web/test/index.html
+++ b/app/diwi/trunk/client/web/test/index.html
@@ -29,6 +29,10 @@ Several tests/try outs for DIWI web client.
 		<td>Test KWClientDIWI calls</td>
 	</tr>
 	<tr>
+		<td><a href="queries-diwi.html">kwclient-diwi.html</a></td>
+		<td>Test DiWi REST queries</td>
+	</tr>
+	<tr>
 		<td><a href="kwclient-cms.html">kwclient-cms.html</a></td>
 		<td>Test KWClientCMS calls</td>
 	</tr></table>
