wnp: get things working again

--- a/app/walkandplay/trunk/client/web/index.html
+++ b/app/walkandplay/trunk/client/web/index.html
@@ -5,7 +5,7 @@
 <title>GeoTracing</title>
 <script type="text/javascript" src="js/gt/DHTML.js"></script>
 <script type="text/javascript" src="js/gt/GMap.js"></script>
-<script type="text/javascript" src="js/gt/GMapKeys.js"></script>
+<script type="text/javascript" src="js/GMapKeys.js"></script>
 <script type="text/javascript" src="js/MyApp.js"></script>
 <script type="text/javascript" src="js/WPapp.js"></script>
 <script type="text/javascript" src="js/myKWClient.js"></script>
