Finalise RD2WGS84

--- a/app/diwi/trunk/client/web/test/index.html
+++ b/app/diwi/trunk/client/web/test/index.html
@@ -29,7 +29,7 @@ Several tests/try outs for DIWI web client.
 		<td>Test KWClientDIWI calls</td>
 	</tr>
 	<tr>
-		<td><a href="queries-diwi.html">kwclient-diwi.html</a></td>
+		<td><a href="queries-diwi.html">queries-diwi.html</a></td>
 		<td>Test DiWi REST queries</td>
 	</tr>
 	<tr>
