--- a/app/jgps/trunk/server/webapp/static-layout-footer.html
+++ b/app/jgps/trunk/server/webapp/static-layout-footer.html
@@ -1,11 +1,11 @@
 <tr>
 	<td>&nbsp;</td>
-	<td colspan="4" valign="top" bgcolor="#000000" class="borderboven"><div align="right"><span class="sitewide">&copy;Jeugd GePoSitioneerd 2007</span>
+	<td colspan="4" valign="top" bgcolor="#004b7d" class="borderboven"><div align="right"><span class="sitewide">&copy;Jeugd GePoSitioneerd 2007</span>
 	</div></td>
 </tr>
 </table>
 <map name="Map" id="Map"><area shape="rect" coords="26,3,81,14" href="index.jsp" alt="home"/>
-	<area shape="rect" coords="91,4,149,18" href="colofon.jsp" alt="colofon"/>
+	<area shape="rect" coords="91,4,149,18" href="colofon.jsp" alt="Partner"/>
 	<area shape="rect" coords="162,4,203,15" href="help.jsp" alt="help"/>
 </map>
 </body>
