--- a/app/jgps/trunk/server/webapp/static-layout-header.html
+++ b/app/jgps/trunk/server/webapp/static-layout-header.html
@@ -15,25 +15,20 @@
 	<td colspan="2">&nbsp;</td>
 </tr>
 <tr>
-	<td width="170"><img src="images/focus.jpg" alt="techniek" width="150" height="100" hspace="0" vspace="0"
-						 class="imagekader"/></td>
-	<td width="170"><img src="images/stoel.jpg" alt="kusbuswoningen" width="150" height="100" class="imagekader"/></td>
-	<td width="170"><img src="images/maninstreet.jpg" alt="HTC" width="150" height="100"
-						 class="imagekaderlichtgrijs"/></td>
+	<td width="510" colspan=3><img src="images/JGPS_logo02.jpg" alt="Jeugd Gepositioneerd" width="450" height="100" hspace="0" vspace="0"/></td>
+	</td>
 	<td width="320">
 <!--		<div class="navtekst"><a href="http://www.senseofthecity.nl">sense of the city</a></div>  -->
 		<div class="navtekst"><a href="sense.jsp">Jeugd GePoSitioneerd</a></div>
 		<div class="navtekst"><a href="deelnemers.jsp">deelnemers</a></div>
-		<div class="navtekst"><a href="map.jsp">routes</a></div>
-		<div class="navtekst"><a href="map.jsp?cmd=live">live</a></div>
-		<div class="navtekst"><a href="map.jsp?cmd=autoplay">autoplay</a></div>
+		<div class="navtekst"><a href="locatie-map.jsp?punt=4.203817,50.795272&zoom=9">Kaart</a></div>
 	</td>
 </tr>
 <tr>
-	<td width="170" bgcolor="#EE3224">&nbsp;</td>
-	<td width="170" bgcolor="#EE3224">&nbsp;</td>
-	<td width="170" bgcolor="#EE3224">&nbsp;</td>
-	<td width="320" bgcolor="#EE3224"><div align="right">
-		<img src="images/sitewide.jpg" alt="sitewide menu" width="200" height="15" hspace="15" border="0"
+	<td width="170" bgcolor="#004b7d">&nbsp;</td>
+	<td width="170" bgcolor="#004b7d">&nbsp;</td>
+	<td width="170" bgcolor="#004b7d">&nbsp;</td>
+	<td width="320" bgcolor="#004b7d"><div align="right">
+		<img src="images/sitewide1.jpg" alt="sitewide menu" width="200" height="15" hspace="15" border="0"
 			 usemap="#Map"/></div></td>
 </tr>
